--- a/work.html
+++ b/work.html
@@ -118,35 +118,35 @@
 							<!-- ремонт компьютерной техники -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="#" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/" alt="Адаптивная кросбраузерная верстка, интеграция верстки в WP, Евлоев Гапур"></a>
-									<h3 class="work-item__head">Вствить свое</h3>
-									<p class="work-item__tools">HTML5, CSS3, Stylus, Pug, Gulp, JS, Jquery, Bootstrap 4, БЭМ, PHP, WordPress</p>
+									<a href="logo_type/index.html" class="work-item__img" target="_blank" style="background-image: url(img/work/HTML_Template/logo.png);" alt="Адаптивная кросбраузерная верстка, интеграция верстки в WP, Евлоев Муслим"></a>
+									<h3 class="work-item__head">Logotype</h3>
+									<p class="work-item__tools">HTML5, CSS3, Stylus, Pug, Gulp, JS, Jquery, БЭМ</p>
 								</div>
 							</div>
 
 							<!-- WebCareeer -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="#" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/" alt="Адаптивная кросбраузерная верстка, дизайн компонентов, интеграция верстки в Bitrix, Евлоев Гапур"></a>
-									<h3 class="work-item__head">Вствить свое</h3>
-									<p class="work-item__tools">HTML5, Stylus, Jade, Gulp, Jquery, PHP, Bootstrap grid, БЭМ</p>
+									<a href="go-serf/app/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/serfgo.png" alt="Адаптивная кросбраузерная верстка, дизайн компонентов, интеграция верстки в Bitrix, Евлоев Муслим"></a>
+									<h3 class="work-item__head">GoSefr</h3>
+									<p class="work-item__tools">HTML5, Stylus, Jade, Gulp, Jquery, БЭМ</p>
 								</div>
 							</div>
 
 							<!-- Клиника -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="mogo_self/index.html" class="work-item__img" target="_blank" style="background-image: url(img/work/HTML_Template/mogo.png);" data-alt="Адаптивная кросбраузерная верстка, интеграция верстки в WP, Евлоев Гапур"></a>
-									<h3 class="work-item__head">Вствить свое</h3>
-									<p class="work-item__tools">HTML5, CSS3, Stylus, Pug, Gulp, JS, Jquery, Bootstrap 4, БЭМ, PHP, WordPress</p>
+									<a href="mogo_self/index.html" class="work-item__img" target="_blank" style="background-image: url(img/work/HTML_Template/mogo.png);" data-alt="Адаптивная кросбраузерная верстка, интеграция верстки в WP, Евлоев Муслим"></a>
+									<h3 class="work-item__head">Mogo</h3>
+									<p class="work-item__tools">HTML5, CSS3, Stylus, Gulp, Jquery, БЭМ</p>
 								</div>
 							</div>
 
 							<!-- Sogaz -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="#" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/sogaz.jpg" alt="Адаптивная кросбраузерная верстка, Евлоев Гапур"></a>
-									<h3 class="work-item__head">Вствить свое</h3>
+									<a href="bondi/app/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/bondi-img.png" alt="Адаптивная кросбраузерная верстка, Евлоев Муслим"></a>
+									<h3 class="work-item__head">Bondi</h3>
 									<p class="work-item__tools">HTML5, CSS3, Stylus, Pug, Gulp, JS, Jquery, Bootstrap 4, БЭМ</p>
 								</div>
 							</div>
@@ -154,7 +154,7 @@
 							<!-- WebCareeer -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="webcareer/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/webcareer.png" alt="Верстка сайта, аддаптивная верстка, Евлоев Гапур"></a>
+									<a href="webcareer/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/webcareer.png" alt="Верстка сайта, аддаптивная верстка, Евлоев Муслим"></a>
 									<h3 class="work-item__head">WebCareeer</h3>
 									<p class="work-item__tools">HTML5, SASS, Gulp, Jquery, Bootstrap grid, БЭМ</p>
 								</div>
