--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<h2 class="about__head">Привет, меня зовут <strong>Евлоев Муслим</strong></h2>
 							<h3 class="about__age">Мне 20 лет и я <a href="https://hh.ru/resume/f51d61daff0759eedf0039ed1f717466337567" target="_blank">HTML-верстальщик</a>.</h3>
 							<div class="about__education">
-								<h3 class="about__categoria">Образование</h3> <span>являюсь студентом 1 курса МТУСИ.</span>
+								<h3 class="about__categoria">Образование</h3> <span>являюсь студентом заочного отделения МТУСИ.</span>
 							</div>
 							<div class="about__quality">
 								<h3 class="about__categoria">Личные качества</h3><span> В работе я внимателен и сосредоточен. Усидчивость и любознательность помогли мне самостоятельно изучить с нуля профессию всего за несколько месяцев. Поставленные и возникшие задачи решаю вовремя и качественно, это может подтвердить любой из моих работодателей. Высокие нагрузки и сложные цели — это то, с чем я сталкиваюсь каждый день и успешно справляюсь.</span>
