--- a/work.html
+++ b/work.html
@@ -118,7 +118,7 @@
 							<!-- ремонт компьютерной техники -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="logo_type/index.html" class="work-item__img" target="_blank" style="background-image: url(img/work/HTML_Template/logo.png);" alt="Адаптивная кросбраузерная верстка, интеграция верстки в WP, Евлоев Муслим"></a>
+									<a href="logo_type/index.html" class="work-item__img" target="_blank" style="background-image: url(img/work/HTML_Template/logo.png);" alt="Адаптивная кросбраузерная верстка, Евлоев Муслим"></a>
 									<h3 class="work-item__head">Logotype</h3>
 									<p class="work-item__tools">HTML5, CSS3, Stylus, Pug, Gulp, JS, Jquery, БЭМ</p>
 								</div>
@@ -127,7 +127,7 @@
 							<!-- WebCareeer -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="go-serf/app/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/serfgo.png" alt="Адаптивная кросбраузерная верстка, дизайн компонентов, интеграция верстки в Bitrix, Евлоев Муслим"></a>
+									<a href="go-serf/app/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/serfgo.png" alt="Адаптивная кросбраузерная верстка,Евлоев Муслим"></a>
 									<h3 class="work-item__head">GoSefr</h3>
 									<p class="work-item__tools">HTML5, Stylus, Jade, Gulp, Jquery, БЭМ</p>
 								</div>
@@ -136,7 +136,7 @@
 							<!-- Клиника -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="mogo_self/index.html" class="work-item__img" target="_blank" style="background-image: url(img/work/HTML_Template/mogo.png);" data-alt="Адаптивная кросбраузерная верстка, интеграция верстки в WP, Евлоев Муслим"></a>
+									<a href="mogo_self/index.html" class="work-item__img" target="_blank" style="background-image: url(img/work/HTML_Template/mogo.png);" data-alt="Адаптивная кросбраузерная верстка Евлоев Муслим"></a>
 									<h3 class="work-item__head">Mogo</h3>
 									<p class="work-item__tools">HTML5, CSS3, Stylus, Gulp, Jquery, БЭМ</p>
 								</div>
