--- a/work.html
+++ b/work.html
@@ -127,7 +127,7 @@
 							<!-- WebCareeer -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="go-serf/app/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/serfgo.png" alt="Адаптивная кросбраузерная верстка,Евлоев Муслим"></a>
+									<a href="go-serf/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/serfgo.png" alt="Адаптивная кросбраузерная верстка,Евлоев Муслим"></a>
 									<h3 class="work-item__head">GoSefr</h3>
 									<p class="work-item__tools">HTML5, Stylus, Jade, Gulp, Jquery, БЭМ</p>
 								</div>
@@ -145,7 +145,7 @@
 							<!-- Sogaz -->
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="work-item">
-									<a href="bondi/app/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/bondi-img.png" alt="Адаптивная кросбраузерная верстка, Евлоев Муслим"></a>
+									<a href="bondi/index.html" class="work-item__img" target="_blank"><img src="img/work/HTML_Template/bondi-img.png" alt="Адаптивная кросбраузерная верстка, Евлоев Муслим"></a>
 									<h3 class="work-item__head">Bondi</h3>
 									<p class="work-item__tools">HTML5, CSS3, Stylus, Pug, Gulp, JS, Jquery, Bootstrap 4, БЭМ</p>
 								</div>
