go serf, bondi,logotype

--- a/logo_type/index.html
+++ b/logo_type/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/media.css">
-    <title>Document</title>
+    <title>Logo Type</title>
   </head>
   <body>
     <header class="header">
@@ -227,10 +227,11 @@
                               <label>
                                 Тема вопроса
                                 <select>
-                                  <option>-------------</option>
-                                  <option>-------------</option>
-                                  <option>-------------</option>
-                                  <option>-------------</option>
+                                  <option>              </option>
+                                  <option>Имущественные отношения</option>
+                                  <option>Банкротство</option>
+                                  <option>Составление договора</option>
+                                  <option>Консультация</option>
                                 </select>
                               </label>
                             </div>
